--- a/src/main/resources/properties/local.properties
+++ b/src/main/resources/properties/local.properties
@@ -1,5 +1,5 @@
 #### Oracle DB Info #### 
 db.driver=oracle.jdbc.driver.OracleDriver
-db.url=jdbc:oracle:thin:@localhost:1521:orcl
+db.url=jdbc:oracle:thin:@localhost:1521:xe
 db.username=rnjdejr
 db.password=cma1rprn
