--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,20 @@
 			<version>5.0.6.RELEASE</version>
 		</dependency>
 		
+		<!-- aspectjweaver -->
+		<dependency>
+		    <groupId>org.aspectj</groupId>
+		    <artifactId>aspectjweaver</artifactId>
+		    <version>1.9.1</version>
+		</dependency>
+		
+		<!-- aspectjlib -->
+		<dependency>
+		    <groupId>org.aspectj</groupId>
+		    <artifactId>aspectjlib</artifactId>
+		    <version>1.6.2</version>
+		</dependency>
+		
 		<!-- CGLib -->
 		<dependency>
 		    <groupId>cglib</groupId>
