--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,18 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        
+		<dependency>
+			<groupId>org.bgee.log4jdbc-log4j2</groupId>
+			<artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
+			<version>1.16</version>
+		</dependency>
+        
+        <dependency>
+		    <groupId>org.lazyluke</groupId>
+		    <artifactId>log4jdbc-remix</artifactId>
+		    <version>0.2.7</version>
+		</dependency>
 
 		<!-- @Inject -->
 		<dependency>
@@ -264,6 +276,13 @@
 			<version>1.10</version>
 		</dependency>
 		
+		<!-- ojdbc -->
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>12.1.0.1-atlassian-hosted</version>
+		</dependency>
+		
 		<!-- DBCP2 -->
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
@@ -291,4 +310,11 @@
 			</plugin>
 		</plugins>
     </build>
+   	<repositories>
+		<repository>
+			<id>oracle</id>
+			<name>ORACLE JDBC Repository</name>
+			<url>https://maven.atlassian.com/3rdparty/</url>
+		</repository>
+	</repositories>
 </project>
