--- a/src/main/resources/properties/local.properties
+++ b/src/main/resources/properties/local.properties
@@ -1,7 +1,7 @@
 #### Oracle DB Info #### 
-db.driver=net.sf.log4jdbc.DriverSpy
-#db.driver=oracle.jdbc.driver.OracleDriver
-db.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:xe
-#db.url=jdbc:oracle:thin:@localhost:1521:xe
+#db.driver=net.sf.log4jdbc.DriverSpy
+db.driver=oracle.jdbc.driver.OracleDriver
+#db.url=jdbc:log4jdbc:oracle:thin:@localhost:1521:xe
+db.url=jdbc:oracle:thin:@localhost:1521:xe
 db.username=rnjdejr
 db.password=cma1rprn
